--- a/custom.css
+++ b/custom.css
@@ -15,3 +15,11 @@
 .caseBlock {
     background-color: grey;
 }
+
+.caseGrey {
+    height: 50px;
+    width: 50px;
+    background-color: grey;
+    margin-left: 1px;
+    margin-right: 1px;
+}
