--- a/deplacement/custom.css
+++ b/deplacement/custom.css
@@ -24,10 +24,6 @@
     margin-right: 1px;
 }
 
-.tedPlayer {
-    background: url(assets/ted-player.png)
-}
-
-.barneyPlayer {
-    background: url(assets/barney-player.png)
+.player {
+    background-color: blue;
 }
