--- a/custom.css
+++ b/custom.css
@@ -24,10 +24,30 @@
     margin-right: 1px;
 }
 
+/* Players */
+
 .tedPlayer {
     background: url(assets/ted-player.png)
 }
 
 .barneyPlayer {
     background: url(assets/barney-player.png)
+}
+
+/* Weapons */
+
+.weaponTie {
+    background: url(assets/tie.png)
+}
+
+.weaponUmbrella {
+    background: url(assets/umbrella.png)
+}
+
+.weaponHorn {
+    background: url(assets/blue-horn.png)
+}
+
+.weaponPineapple {
+    background: url(assets/pineapple.png)
 }
