--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,3 @@
-
 .row {
     display: flex;
     margin-bottom: 2px;
@@ -24,30 +23,6 @@
     margin-right: 1px;
 }
 
-/* Players */
-
-.tedPlayer {
-    background: url(assets/ted-player.png);
-}
-
-.barneyPlayer {
-    background: url(assets/barney-player.png);
-}
-
-/* Weapons */
-
-.weaponTie {
-    background: url(assets/tie.png);
-}
-
-.weaponUmbrella {
-    background: url(assets/umbrella.png);
-}
-
-.weaponHorn {
-    background: url(assets/blue-horn.png);
-}
-
-.weaponPineapple {
-    background: url(assets/pineapple.png);
+.player {
+    background-color: blue;
 }
