--- a/deplacement/custom.css
+++ b/deplacement/custom.css
@@ -24,6 +24,14 @@
     margin-right: 1px;
 }
 
+.caseYouCanGo {
+    height: 50px;
+    width: 50px;
+    background-color: rgb(252, 158, 142);
+    margin-left: 1px;
+    margin-right: 1px;
+}
+
 .player {
     background-color: blue;
 }
