allègement du code

--- a/custom.css
+++ b/custom.css
@@ -52,7 +52,7 @@
 }
 
 .weaponHorn {
-    background: url(assets/blue-horn.png);
+    background: url(assets/blue-horn-weapon.png);
 }
 
 .weaponPineapple {
