--- a/game-oop/custom.css
+++ b/game-oop/custom.css
@@ -1,8 +1,3 @@
-.row {
-    display: flex;
-    margin-bottom: 2px;
-}
-
 /* Players */
 
 .player-1 {
@@ -16,22 +11,25 @@
 /* Weapons */
 
 .weaponTie {
-    background: url(assets/tie.png);
+    background-image: url(assets/tie.png);
 }
 
 .weaponUmbrella {
-    background: url(assets/umbrella.png);
+    background-image: url(assets/umbrella.png);
 }
 
 .weaponHorn {
-    background: url(assets/blue-horn-weapon.png);
+    background-image: url(assets/blue-horn-weapon.png);
 }
 
 .weaponPineapple {
-    background: url(assets/pineapple.png);
+    background-image: url(assets/pineapple.png);
 }
 
-/* All cases */
+.row {
+    display: flex;
+    margin-bottom: 2px;
+}
 
 .case {
     height: 50px;
