--- a/game-oop/custom.css
+++ b/game-oop/custom.css
@@ -109,3 +109,34 @@ img {
 .btn {
     cursor: pointer;
 }
+
+.modal {
+    top: 15% !important;
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 1s; /* Firefox < 16 */
+    -ms-animation: fadein 1s; /* Internet Explorer */
+    -o-animation: fadein 1s; /* Opera < 12.1 */
+    animation: fadein 1s;
+}
+
+.modal-content {
+    background:#FEF8EE !important;
+}
+
+@-webkit-keyframes fadein {
+    from { opacity: 0; };
+    to   { opacity: 1; };
+}
+
+.btn-primary {
+    background-color: tomato !important;
+    border: none !important;
+}
+
+.btn-primary:focus{
+    box-shadow: none !important;
+}
+
+.dotBorder{
+    border-style:dotted !important;
+}
