--- a/game-oop/custom.css
+++ b/game-oop/custom.css
@@ -18,7 +18,12 @@ h6 {
     max-width:100% !important;
 }
 
-h1 {
+.row {
+    margin-right:0 !important;
+    margin-left:0 !important;
+}
+
+h1, h5 {
     font-family: 'Maven Pro', sans-serif;
 }
 
@@ -27,11 +32,6 @@ span {
     letter-spacing:2px;
     font-size:22px;
 }
-
-img {
-    margin-right:25px;
-}
-
 
 .align-vertical {
     transform: translateY(6%);
@@ -134,13 +134,25 @@ img {
     to   { opacity: 1; };
 }
 
+.blur {
+    filter: blur(2px)
+}
+
 .btn-primary {
     background-color: tomato !important;
     border: none !important;
 }
 
+.btn {
+    padding: 0.375rem 2.75rem !important;
+}
+
 .btn-primary:focus { 
     box-shadow: none !important;
+}
+
+.defendBtn {
+    background-color:#4e9267 !important;
 }
 
 .greyEffect {
@@ -172,4 +184,10 @@ span:nth-child(2){animation-delay: 0.5s;}
 
 .modal-footer {
     border-top:none !important;
+}
+
+@media (min-width: 576px) {
+    .modal-dialog {
+        max-width: 600px !important;
+    }
 }
